[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "snakelang"
version = "0.0.2"
authors = [
  { name="Emery Berger", email="emery.berger@gmail.com" },
]
dependencies = ["openai>=0.27.0", "click>=8.1.3"]
description = "TBD."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/plasma-umass/snakelang"
"Bug Tracker" = "https://github.com/plasma-umass/snakelang/issues"
